--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	</head>
 	<body>
-		<h1>For Github Page Test</h1>
+		<h1>For Github Page test2</h1>
 		<p>JS2</p>
-		<h1>For Github Page Test</h1>
+		<h1>For Github Page test23</h1>
 		<p>JS2</p>
 	</body>
 </html>
